fix: appointment creation
