# docs/swagger.json
@@ -78,7 +78,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.Appointment"
+                            "$ref": "#/definitions/handlers.AppointmentCreateRequest"
                         }
                     }
                 ],
@@ -2009,6 +2009,45 @@
                 "RoleReceptionist",
                 "RoleClient"
             ]
+        },
+        "handlers.AppointmentCreateRequest": {
+            "type": "object",
+            "required": [
+                "client_id",
+                "date_time",
+                "doctor_id",
+                "duration_minutes"
+            ],
+            "properties": {
+                "anamnesis": {
+                    "type": "string"
+                },
+                "client_id": {
+                    "type": "string"
+                },
+                "comment": {
+                    "type": "string"
+                },
+                "complaint_id": {
+                    "description": "Optional medical fields for initial appointment",
+                    "type": "string"
+                },
+                "custom_complaint": {
+                    "type": "string"
+                },
+                "date_time": {
+                    "type": "string"
+                },
+                "doctor_id": {
+                    "type": "string"
+                },
+                "duration_minutes": {
+                    "type": "integer"
+                },
+                "status": {
+                    "$ref": "#/definitions/entities.AppointmentStatus"
+                }
+            }
         },
         "handlers.CreateUserRequest": {
             "type": "object",
